[package]
name = "wcrack"
version = "0.1.0"
edition = "2021"
build="build.rs"

[lib]
name = "wcrack"
crate-type = ["cdylib"]

[dependencies]
cl3 = "=0.9.5"
once_cell = "1.19.0"
opencl3 = { version = "0.9.5", features = ["CL_VERSION_2_1"] }
pyo3 = { version = "0.20", features = ["abi3", "abi3-py37", "extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["attributes", "tokio-runtime"] }
rayon = "1.10.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
fastpbkdf2 = "0.1.0"
async-trait = "0.1.80"
serde = { version = "1.0.199", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
aead = "0.5.2"
aes = "0.*"
aes-gcm = { version = "0.10", features = ["heapless"] }
aes-gcm-siv = "0.11.1"
base64 = "0.22.0"
unescape = "0.1.0"
ctr = "0.9.2"
rust-scrypt = "1.3.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
num = "0.4.3"
bitflags = "2.5.0"
rand = "0.8.5"
